plang/testing/logs/false-incorrect/60/program60.p.p
rzS (G41YK) (WA) (F).

cpkW.
kNbH (s1oE Y).
y9y (UVuyE) (K) (Wq) (kpZD).
lNsst (TBWld) (M23) k (A) :- nkG (juL (hT (y (t sob) (I) (X) hz1lO))) wSX Q.

sT Q0PQ.

nJk WTX (NVW) (OTeQ) :- ((fL4vg b (W672) i ebJB), (kMho Q9Ak (wR4ZQ LS OJ71 nazSf t)), f3yq VP NKtxg (vaKcw (l9rw) DE9Qh (Ih) wu); m6 b IWep; bTLV8 waXg, (h O1 (ouo) I9 (W6)); (jfHrY (jP rqvQ) (qBG (tizUJ k (Y)) O7xmc) a8Kn5 (M4)), c1b6l).


qj h jInD :- (sNLgF Emb bsT ZMbh), (rDvqN Ut2 (DVR) (DV3oE) Uy; yc); yYV y (dN); kv; wp (ROH6) (z (Op4) (RE) (H) E) GG9qD (BrAzI); yYe; x94QI (pTu (I) (R) oc3y0 He) wF0c, (nA; g4 QX zHx6); ((w)), yLlN (A) (WOYmG).


pe75 D :- m bpXl7 m.
zGHMC (IG0r).


vQcB (wIes (m4h d3 (kb (r))) pg (Stn) st) MU bR23 (w7Sf (lFa (V)) tH) :- gCR (td) (dE3 (D)) (bDx4 (qeSj5 (pNRDR MXR7L) Oj30z)) xH.


lVnHb.
t4o V BgpqL :- (zh qY SY); fh (wrLT P (rnW (JUe3))) LF ZKZm (WOKh); (mmi), r; c (Yxn) Hg (wXG (qnRgy (Jy)) (L) P2 Jstr7) (m), fJ ZuL7 (Sm9Vl) (a5G97), gIL; fmk9s (yYL7 (D7) (fuO nFJWm xko5M (A)) (qbA (mI EP) FPd nnRG)); olnJj P1 Sh6x n4D9O (xyK Y (JX) (n DjVKF (ar1ej) (Y1) (IgvS9))); ((qal (eVS Pq gW Retw) zSmDn); ztfH (MDpRx) RP d69q5).

hack fMw01 q :- vFC tA (W5jN) dh; ei QX6N J8M7F.
hRj (E) qVk (KzV).


? (s (Yc) (K) (C5) (zt8v Ln6z tx0l0); nzXe p se9j fW; zW fj (wpsHD j) cn0YO; zxO OAWRz b9Mkb (lXn (k7sAA (FsKh)) VCMJ) E); (ds mvAtN (w2Q (JqP) (O2)) aA0G).

